# PushFill

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  ReadMe.md  blog-post.md  go.mod  main.go  mkdocs.yml  pyproject.toml  random_bench.py  wheel.json
Source/: PushFill.c
docs/: docinfo.json  history.md  how-it-works.md  index.md  install.md  mkdocs.yml  usage.md
docs/mkdocs/: index.md  install.md  licence.md  usage.md
internal/: cli.go  display.go  filler.go  platform_unix.go  platform_windows.go  statfs_darwin.go  statfs_linux.go
pushfill/: __init__.py  __main__.py  argbuilder.py  cli.py  colour.py  display.py  filler.py  version.py
