[tool.hatch.build]
artifacts = ["pushfill/_version.py"]

[tool.hatch.build.targets.wheel]
packages = ["pushfill"]

[project]
name = "pushfill"
dynamic = ["version"]
description = "Fill a disk with random data to push out old SSD data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
license = "Unlicense"
authors = [
    { name = "WaterJuice" },
]
keywords = ["disk", "fill", "random", "ssd", "wipe", "erase"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
pushfill = "pushfill.cli:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
pattern = "default-unprefixed"

[tool.uv]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = ["F", "E", "W", "I", "Q", "B", "TC", "UP"]
ignore = ["E501", "B009", "B010", "UP036", "TC001", "TC003"]

[tool.ruff.lint.isort]
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]
force-single-line = true

[tool.pyright]
typeCheckingMode = "strict"
reportUnusedImport = "error"
pythonVersion = "3.9"
exclude = ["random_bench.py", ".venv"]

[dependency-groups]
dev = [
    "ruff",
    "pyright[nodejs]",
]
