[project]
name = "pushfill"
requires-python = ">=3.12"
version = "0.0.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[project.urls]
Documentation = "https://docs.waterjuice.org/pushfill/latest/"
Source = "https://github.com/WaterJuice/pushfill"

[tool.wj-publish]
profile = "waterjuice"

[tool.uv]

[dependency-groups]
dev = [
    "bin2whl>=1.0.0b3",
    "wj-publish",
]
docs = [
    "wj-mkdocs",
]
